--- a/package.json
+++ b/package.json
@@ -20,15 +20,16 @@
   },
   "homepage": "https://github.com/huzidaha/huzidaha.com#readme",
   "dependencies": {
-    "koa": "^2.0.0",
-    "next": "^2.0.0-beta.18",
     "joi": "^10.1.0",
+    "koa": "^2.0.0",
     "koa-body": "^1.6.0",
     "koa-logger": "^1.3.0",
     "koa-router": "^7.1.0",
     "lodash": "^4.17.4",
     "moment": "^2.17.1",
     "mongoose": "^4.7.6",
+    "next": "^2.0.0-beta.18",
+    "ramda": "^0.23.0",
     "uuid": "^3.0.1"
   },
   "devDependencies": {
