--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mongoose": "^4.7.6",
     "next": "^2.0.0-beta.18",
     "ramda": "^0.23.0",
+    "ramda-fantasy": "^0.7.0",
     "uuid": "^3.0.1"
   },
   "devDependencies": {
