--- a/package.json
+++ b/package.json
@@ -24,11 +24,20 @@
       "es2015"
     ],
     "plugins": [
-      ["import" , [{ "libraryName": "antd" }]]
+      [
+        "import",
+        [
+          {
+            "libraryName": "antd"
+          }
+        ]
+      ]
     ]
   },
   "ava": {
-    "require": ["babel-register"],
+    "require": [
+      "babel-register"
+    ],
     "babel": {
       "presets": [
         "@ava/stage-4",
@@ -38,12 +47,14 @@
   },
   "homepage": "https://github.com/huzidaha/huzidaha.com#readme",
   "dependencies": {
+    "highlight.js": "^9.9.0",
     "joi": "^10.1.0",
     "koa": "^2.0.0",
     "koa-body": "^1.6.0",
     "koa-logger": "^1.3.0",
     "koa-router": "^7.1.0",
     "lodash": "^4.17.4",
+    "marked": "^0.3.6",
     "moment": "^2.17.1",
     "mongoose": "^4.7.6",
     "next": "^2.0.0-beta.18",
