--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "next": "^2.0.0-beta.18",
     "ramda": "^0.23.0",
     "ramda-fantasy": "^0.7.0",
+    "react-truncate-html": "^0.1.3",
     "uuid": "^3.0.1"
   },
   "devDependencies": {
