--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   "dependencies": {
     "highlight.js": "^9.9.0",
     "joi": "^10.1.0",
+    "jsonwebtoken": "^7.3.0",
     "koa": "^2.0.0",
     "koa-body": "^1.6.0",
     "koa-logger": "^1.3.0",
@@ -64,7 +65,8 @@
     "react-addons-create-fragment": "^15.4.2",
     "react-paginate": "^4.1.1",
     "react-truncate-html": "^0.1.3",
-    "uuid": "^3.0.1"
+    "uuid": "^3.0.1",
+    "validator": "^6.2.1"
   },
   "devDependencies": {
     "ava": "^0.18.1",
