--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "babel": {
     "presets": [
       "next/babel",
-      "es2015"
+      "es2015",
+      "stage-0"
     ],
     "plugins": [
       [
@@ -31,7 +32,8 @@
             "libraryName": "antd"
           }
         ]
-      ]
+      ],
+      "transform-decorators"
     ]
   },
   "ava": {
@@ -64,7 +66,10 @@
     "ramda-fantasy": "^0.7.0",
     "react-addons-create-fragment": "^15.4.2",
     "react-paginate": "^4.1.1",
+    "react-redux": "^5.0.2",
     "react-truncate-html": "^0.1.3",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0",
     "uuid": "^3.0.1",
     "validator": "^6.2.1"
   },
