change upper change name and add missing deps

--- a/package.json
+++ b/package.json
@@ -68,7 +68,9 @@
     "nprogress": "^0.2.0",
     "ramda": "^0.23.0",
     "ramda-fantasy": "^0.7.0",
+    "react": "^15.4.2",
     "react-addons-create-fragment": "^15.4.2",
+    "react-dom": "^15.4.2",
     "react-paginate": "^4.1.1",
     "react-redux": "^5.0.2",
     "react-truncate-html": "^0.1.3",
