--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "test": "ava",
     "dev": "babel-node ./server/index.js",
     "start": "NODE_ENV=production node ./server/index.js",
-    "build:client": "rm -rf build && next build",
+    "build:client": "rm -rf build && next build && npm run build:less",
+    "build:less": "lessc --clean-css ./styles/index.less static/styles.css ",
     "build:server": "babel ./server/ --out-dir build/server/ && babel ./common/ --out-dir build/common/ && babel ./config.js --out-dir build && babel ./secrect.js --out-dir build",
     "build:move": "mv .next ./build && cp -a static ./build/ && cp package.json ./build/ && cp deployment.json ./build/",
-    "build:less": "lessc --clean-css ./styles/index.less static/styles.css ",
     "build": "npm run build:client && npm run build:server && npm run build:move",
     "deploy": "git pull && npm run build && pm2 restart huzidaha --env production"
   },
