--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
           }
         ]
       ],
-      "transform-decorators"
+      "transform-decorators-legacy"
     ]
   },
   "ava": {
@@ -86,6 +86,7 @@
     "babel-cli": "^6.18.0",
     "babel-eslint": "^7.1.1",
     "babel-plugin-import": "^1.1.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-0": "^6.16.0",
     "eslint": "^3.13.1",
