--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build:server": "babel ./server/ --out-dir build/server/ && babel ./common/ --out-dir build/common/ && babel ./config.js --out-dir build && babel ./secrect.js --out-dir build",
     "build:move": "mv .next ./build && cp -a static ./build/ && cp package.json ./build/ && cp deployment.json ./build/",
     "build": "npm run build:client && npm run build:server && npm run build:move",
+    "create": "babel-node ./scripts/create.js",
     "deploy": "git pull && npm run build && pm2 restart huzidaha --env production"
   },
   "repository": {
@@ -89,6 +90,7 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-0": "^6.16.0",
+    "bluebird": "^3.4.7",
     "eslint": "^3.13.1",
     "eslint-config-standard": "^6.2.1",
     "eslint-config-standard-jsx": "^3.2.0",
